# teeterbot

./: nc_pendulum_controller.tgz
nc_pendulum_simulink_files/: bus_objects.mat  bus_objects.mat_  nc_pendulum.slx  nc_pendulum.slx.autosave  nc_pendulum.slxc  nc_pendulum_controller.slx  nc_pendulum_controller.slx.autosave  nc_pendulum_controller.slxc  nc_pendulum_plant.slx  nc_pendulum_plant.slx.autosave  nc_pendulum_plant.slxc  parameters.asv  parameters.m  roll.slxc
nc_pendulum_simulink_files/nc_pendulum_controller_ert_rtw/: CMakeLists.txt  MW_custom_RTOS_header.h  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  defines.txt  ert_main.cpp  modelsources.txt  nc_pendulum_controller.cpp  nc_pendulum_controller.h  nc_pendulum_controller.mk  nc_pendulum_controller_private.h  nc_pendulum_controller_types.h  package.xml  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  (+12 more)
teeterbot_mw/: CMakeLists.txt  package.xml
teeterbot_mw/launch/: teeterbot_mw.launch  teeterbot_robot_mw.launch
teeterbot_mw/src/: ControllerInterfacePlugin.cpp  MW_custom_RTOS_header.h  MW_target_hardware_resources.h  ert_main.cpp  nc_pendulum_controller.cpp  nc_pendulum_controller.h  nc_pendulum_controller.tgz  nc_pendulum_controller_private.h  nc_pendulum_controller_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h  teeterbot_controller.cpp  teeterbot_main.cpp
(+96 files in other folders)
